--- a/ANDRIANASOLOHARISON_Tsiory_HANGMAN/MainWindow.xaml
+++ b/ANDRIANASOLOHARISON_Tsiory_HANGMAN/MainWindow.xaml
@@ -5,39 +5,106 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ANDRIANASOLOHARISON_Tsiory_HANGMAN"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="850">
+        Title="MainWindow" Height="600" Width="900">
     <Grid>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="100"></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0" Name="Ensemble" Background="Aqua">
+
+        <Grid Grid.Row="0" Name="Ensemble" Background="Azure" Margin="0,10,0,90" Grid.RowSpan="2">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-
-            <Grid Grid.Column="1" Name="gridKeyboard">
+            <Grid Grid.Column="0" Name="Affichage">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="50"></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock Background="Orange" TextAlignment="Center" Padding="10" HorizontalAlignment="Center" Height="48" TextWrapping="Wrap" Text="HANGMAN GAME" VerticalAlignment="Top" Width="358" FontSize="22" FontFamily="Times New Roman" Margin="0,314,0,0"/>
+
+            </Grid>
+
+            <Grid Grid.Column="1" Name="gridKeyboard" Background="Azure" Margin="0,0,0,22">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
+                <Grid.Resources>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Margin" Value="3"></Setter>
+                        <Setter Property="Background" Value="Orange"></Setter>
+                        <Setter Property="FontSize" Value="30"></Setter>
+                        <Setter Property="TextBlock.TextAlignment" Value="Center"></Setter>
+                        <Style.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="8"></Setter>
+                            </Style>
+                        </Style.Resources>
+                    </Style>
+
+                </Grid.Resources>
+
+                <Button Grid.Row="0" Grid.Column="0" Name ="A" Content="A" Click="A_Click" ></Button>
+                <Button Grid.Row="0" Grid.Column="1" Name ="B" Content="B" Click="B_Click" ></Button>
+                <Button Grid.Row="0" Grid.Column="2" Name ="C" Content="C" Click="C_Click" ></Button>
+                <Button Grid.Row="0" Grid.Column="3" Name ="D" Content="D" Click="D_Click" ></Button>
+
+                <Button Grid.Row="1" Grid.Column="0" Name ="E" Content="E" Click="E_Click" ></Button>
+                <Button Grid.Row="1" Grid.Column="1" Name ="F" Content="F" Click="F_Click" ></Button>
+                <Button Grid.Row="1" Grid.Column="2" Name ="G" Content="G" Click="G_Click" ></Button>
+                <Button Grid.Row="1" Grid.Column="3" Name ="H" Content="H" Click="H_Click" ></Button>
+
+                <Button Grid.Row="2" Grid.Column="0" Name="I" Content="I" Click="I_Click" ></Button>
+                <Button Grid.Row="2" Grid.Column="1" Name="J" Content="J" Click="J_Click" ></Button>
+                <Button Grid.Row="2" Grid.Column="2" Name="K" Content="K" Click="K_Click" ></Button>
+                <Button Grid.Row="2" Grid.Column="3" Name="L" Content="L" Click="L_Click" ></Button>
+
+                <Button Grid.Row="3" Grid.Column="0" Name="M" Content="M" Click="M_Click" ></Button>
+                <Button Grid.Row="3" Grid.Column="1" Name="N" Content="N" Click="N_Click" ></Button>
+                <Button Grid.Row="3" Grid.Column="2" Name="O" Content="O" Click="O_Click" ></Button>
+                <Button Grid.Row="3" Grid.Column="3" Name="P" Content="P" Click="P_Click" ></Button>
+
+                <Button Grid.Row="4" Grid.Column="0" Name="Q" Content="Q" Click="Q_Click" ></Button>
+                <Button Grid.Row="4" Grid.Column="1" Name="R" Content="R" Click="R_Click" ></Button>
+                <Button Grid.Row="4" Grid.Column="2" Name="S" Content="S" Click="S_Click" ></Button>
+                <Button Grid.Row="4" Grid.Column="3" Name="T" Content="T" Click="T_Click" ></Button>
+
+                <Button Grid.Row="5" Grid.Column="0" Name="U" Content="U" Click="U_Click" ></Button>
+                <Button Grid.Row="5" Grid.Column="1" Name="V" Content="V" Click="V_Click" ></Button>
+                <Button Grid.Row="5" Grid.Column="2" Name="W" Content="W" Click="W_Click" ></Button>
+                <Button Grid.Row="5" Grid.Column="3" Name="X" Content="X" Click="X_Click"></Button>
+
+                <Button Grid.Row="6" Grid.Column="1" Name="Y" Content="Y" Click="Y_Click" ></Button>
+                <Button Grid.Row="6" Grid.Column="2" Name="Z" Content="Z" Click="Z_Click"></Button>
+
             </Grid>
+            <Image HorizontalAlignment="Left" Height="257" Margin="20,19,0,0" VerticalAlignment="Top" Width="402"/>
             
-            
+
         </Grid>
-        
-        <Grid Grid.Row="1" Name="Reponse" Background="Beige">
-            <Label Content="Reponse"></Label>
+
+        <Grid Grid.Row="1" Name="Reponse" Background="Azure" Margin="0,15,0,0">
+            <Grid HorizontalAlignment="Left" Height="42" Margin="106,24,0,0" VerticalAlignment="Top" Width="616"/>
+            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="58" Margin="280,16,0,0" VerticalAlignment="Top" Width="600"/>
         </Grid>
+
     </Grid>
 </Window>
